<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddb993">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:id="@+id/titluRegister"
            android:text="@string/titluInregistrare"
            android:textSize="36sp"
            android:layout_marginTop="30dp"
            android:padding="10dp"
            android:fontFamily="cursive" />

        <GridLayout
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/activity_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:rowCount="9"
            tools:context="com.proiect.cornel.comunitatecarti.Activities.RegisterActivity"
            android:layout_below="@+id/titluRegister"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="15dp"
                android:layout_columnSpan="2"
                android:layout_row="0"
                android:text="@string/numeUtilizator"
                android:textSize="20sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:id="@+id/etNume"
                android:layout_row="0" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="15dp"
                android:layout_row="1"
                android:text="@string/prenumeUtilizator"
                android:textSize="20sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:id="@+id/etPrenume"
                android:layout_row="1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="15dp"
                android:layout_row="2"
                android:text="@string/usernameText"
                android:textSize="20sp"
                android:fontFamily="sans-serif" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:hint="@string/hintUtilizator"
                android:id="@+id/etUsernameReg"
                android:layout_marginEnd="100dp"
                android:layout_marginStart="5dp"
                android:layout_row="2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="15dp"
                android:layout_row="3"
                android:text="@string/password"
                android:textSize="20sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:id="@+id/etParolaReg"
                android:inputType="textPassword"
                android:layout_marginStart="5dp"
                android:layout_row="3"
                android:hint="@string/passwordHint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="15dp"
                android:layout_row="4"
                android:text="@string/email"
                android:textSize="20sp" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:hint="@string/hintEmail"
                android:id="@+id/etEmailReg"
                android:layout_row="4"
                android:inputType="textEmailAddress"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_column="0"
                android:layout_marginStart="15dp"
                android:layout_row="5"
                android:text="@string/telefon"
                android:textSize="20sp" />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:id="@+id/etTelefonReg"
                android:layout_row="5"
                android:inputType="phone"/>

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_row="6"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="100dp"
                android:layout_column="1"
                android:id="@+id/sexReg"
                >

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="M"
                    android:layout_marginEnd="10dp"
                    android:id="@+id/radioM"
                    />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="F"
                    android:id="@+id/radioF"
                    />

            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvDataNasterii"
                android:layout_column="0"
                android:layout_marginStart="15dp"
                android:textSize="20sp"
                android:layout_row="7"
                />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="8"
                android:layout_column="1"
                android:layout_marginStart="30dp"
                android:text="@string/btnInregText"
                android:onClick="btnRegisterClick"
                android:background="@drawable/button_register"
                android:fontFamily="sans-serif-medium"
                android:textColor="#ddb993"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tvSex"
                android:layout_column="0"
                android:layout_marginStart="15dp"
                android:textSize="20sp"
                android:layout_row="6"
                android:id="@+id/textView2"
               />

            <EditText
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_marginStart="5dp"
                android:layout_row="7"
                android:id="@+id/etDataNasteriiReg"
                android:paddingLeft="10dp"
                android:hint="yyyy-mm-dd"
                android:inputType="date"/>
        </GridLayout>

    </RelativeLayout>
</ScrollView>