<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_meniu"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back2"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.proiect.cornel.comunitatecarti.Activities.MeniuPrincipalActivity">

    <Button
        android:id="@+id/idProfilMeniu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/idCartiMeniu"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:fontFamily="serif-monospace"
        android:text="@string/meniuProfil"
        android:textColor="#e2ca8b"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/idAdaugaCarte"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:background="@drawable/button"
        android:fontFamily="serif-monospace"
        android:text="@string/meniuAdaugaCarte"
        android:textColor="#e2ca8b"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="sans" />


    <Button
        android:id="@+id/idCartiMeniu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/idAdaugaCarte"
        android:layout_alignParentStart="true"
        android:background="@drawable/button"
        android:fontFamily="serif-monospace"
        android:text="@string/meniuToateCartile"
        android:textColor="#e2ca8b"
        android:textSize="18sp"
        android:textStyle="normal|bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/idStatistici"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@id/idAdaugaCarte"
        android:background="@drawable/button"
        android:fontFamily="serif-monospace"
        android:onClick="btnStatisticiClick"
        android:text="@string/statistici"
        android:textColor="#e2ca8b"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />

    <Button
        android:id="@+id/idStatisticiCanvas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/idStatistici"
        android:background="@drawable/button"
        android:fontFamily="serif-monospace"
        android:onClick="btnStatisticiCanvas"
        android:text="@string/meniuStatisticiCanvas"
        android:textColor="#e2ca8b"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />


    <Button
        android:id="@+id/idLogout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/idStatisticiCanvas"
        android:background="@drawable/button"
        android:fontFamily="serif-monospace"
        android:text="@string/meniuLogout"
        android:textColor="#e2ca8b"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="sans" />


</RelativeLayout>
