<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ddb993"
    android:fillViewport="true">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_add_book"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.proiect.cornel.comunitatecarti.Activities.AddBookActivity">

        <LinearLayout
            android:id="@+id/btnAdd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:weightSum="3">

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.6" />

            <Button
                android:id="@+id/btnAdaugaCarte"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.4"
                android:background="@drawable/button_main"
                android:text="@string/adaugaButonText"
                android:textColor="#ddb993" />

        </LinearLayout>

        <fragment
            android:id="@+id/fragmentId"
            class="com.proiect.cornel.comunitatecarti.Classes.fragmentListaCarti"
            android:layout_width="wrap_content"
            android:layout_height="200dp"
            android:layout_below="@id/btnAdd"
            tools:layout="@layout/fragment_listacarti"
            />

        <RelativeLayout
            android:id="@+id/modifcariCarte"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/fragmentId"
            android:visibility="invisible">

            <LinearLayout
                android:id="@+id/idAutori"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:text="@string/addBookAutor"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etAddBookAtuori"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.6" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idCategorii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idAutori"
                android:layout_marginTop="20dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:text="@string/addBookCategorie"
                    android:textSize="20sp" />

                <Spinner
                    android:id="@+id/spinnerCategorieCarteAdd"
                    android:layout_width="0dp"
                    android:layout_height="40dp"
                    android:layout_weight="1.6"
                    android:entries="@array/genuri"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/idDisponibilitate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idCategorii"
                android:layout_marginTop="20dp"
                android:weightSum="3">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.4"
                    android:text="@string/addBookDisponibilitate"
                    android:textSize="20sp" />

                <RadioGroup
                    android:id="@+id/rgDisp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.6"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbDa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbDaText" />

                    <RadioButton
                        android:id="@+id/rbNu"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rbNuText" />

                </RadioGroup>

            </LinearLayout>

            <Button
                android:id="@+id/btnSalvare"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/idDisponibilitate"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:background="@drawable/button_main"
                android:text="@string/btnSalvareSchimbari"
                android:textColor="#ddb993"
                />

        </RelativeLayout>
    </RelativeLayout>
</ScrollView>
