<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#ddb993">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_book_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.proiect.cornel.comunitatecarti.Activities.BookDetailsActivity">

        <TextView
            android:id="@+id/idTitluDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textColor="#000000"
            android:textSize="40sp"
            android:fontFamily="cursive"/>

        <LinearLayout
            android:id="@+id/tvAutori"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
        >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/autoriText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tvAutor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" />

        </LinearLayout>

        <RatingBar
            android:id="@+id/idRatingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/RatingBar" />

        <LinearLayout
            android:id="@+id/idCategorii"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/categoriiText"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/categDetalii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tvReviews"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/reviewText"
            android:textSize="20sp" />

        <ListView
            android:id="@+id/lvReviews"
            android:layout_width="wrap_content"
            android:layout_height="130dp"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp">

        </ListView>

        <LinearLayout
            android:id="@+id/addReview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/etReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/hintReview"
                android:fontFamily="casual" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="3"
                >

                <Button
                    android:id="@+id/btnAdaugaReview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/addReviewBtn"
                    android:textColor="#ddb993"
                    android:background="@drawable/button_main"
                    android:textSize="15sp"
                    />

                <Button
                    android:id="@+id/btnImprumutaCarte"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/imprumutaCarte"
                    android:textColor="#ddb993"
                    android:background="@drawable/button_main"
                    android:textSize="15sp"
                    android:layout_marginStart="30sp"
                    />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</ScrollView>