<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="vertical">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="#916f4a"
        tools:context="com.proiect.cornel.comunitatecarti.Activities.MainActivity">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:padding="20dp"
            android:text="@string/titlu"
            android:id="@+id/titlu"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="#ecbe8f"
            android:fontFamily="cursive" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descriereAplicatie"
            android:textSize="16sp"
            android:id="@+id/idDescriereAplicatie"
            android:layout_below="@+id/titlu"
            android:textColor="#ffbd9d"
            android:textStyle="italic"
            android:layout_marginBottom="30dp"
            />


        </RelativeLayout>


        <LinearLayout
            android:id="@+id/Utilizator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/usernameText"
                android:textSize="20sp"
                android:textColor="#ffbd9d"
                android:fontFamily="sans-serif-smallcaps" />

            <EditText
                android:id="@+id/etUser"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/usernameText"
                android:textSize="20sp"
                android:textColor="#ffbd9d"

                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/Parola"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:weightSum="10">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/password"
                android:textSize="20sp"
                android:id="@+id/textView3"
                android:textColor="#ffbd9d"
                android:fontFamily="sans-serif-smallcaps" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="6"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textSize="20sp"
                android:textColor="#ffbd9d"/>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            >

            <Button
            android:id="@+id/btnRegister"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btnLogin"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="12dp"
            android:padding="10dp"
            android:text="@string/btnRegister"
                android:background="@drawable/button_main"
                android:textColor="#ecbe8f"
            />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/btnLogin"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/btnRegister"
                android:background="@drawable/button_main"
android:textColor="#ecbe8f"
                />

            <ImageView
                android:layout_marginTop="95dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@drawable/carti"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>
